# frontiers2021_gazebo_worlds

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
maps/1ldk_11/: map.pgm
models/3rd_generic_toy_airplane/: model.config  model.sdf
models/3rd_generic_toy_car_classic/: model.config  model.sdf
models/3rd_generic_toy_doll_penguin/: model.config  model.sdf
models/3rd_generic_toy_doll_pig/: model.config  model.sdf
models/3rd_generic_toy_doll_sheep/: model.config  model.sdf
models/3rd_generic_toy_truck/: model.config  model.sdf
models/ir_bath_slipper/: metadata.pbtxt  model.config  model.sdf
models/ir_bowl/: metadata.pbtxt  model.config  model.sdf
models/ir_cup/: metadata.pbtxt  model.config  model.sdf
models/ir_tooth_paste/: metadata.pbtxt  model.config  model.sdf
models/ir_towel/: metadata.pbtxt  model.config  model.sdf
models/ir_treatments/: metadata.pbtxt  model.config  model.sdf
models/ir_truck/: model.config  model.sdf
models/nrp_7eleven_bag_chips_consomme/: model.config  model.sdf
models/nrp_7eleven_bottle_coffee/: model.config  model.sdf
models/nrp_7eleven_bottle_juice_grape/: model.config  model.sdf
models/nrp_7eleven_bottle_juice_tropical/: model.config  model.sdf
models/ycb_003_cracker_box/: model.config  model.sdf
models/ycb_008_pudding_box/: model.config  model.sdf
models/ycb_011_banana/: model.config  model.sdf
models/ycb_013_apple/: model.config  model.sdf
models/ycb_017_orange/: model.config  model.sdf
models/ycb_019_pitcher_base/: model.config  model.sdf
worlds/: 1ldk_11.world
(+15 files in other folders)
